--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
-current_version = 0.01
-files = mdx_titlecase/__init__.py CHANGES.rst README.rst
+current_version = 0.0.1
+files = mdx_titlecase/__init__.py CHANGES.rst
 allow_dirty = True
 commit = False
 tag = False
